# webauth

./: Cargo.toml  README.md
store-redis/: Cargo.toml
store-sqlx-postgresql/: Cargo.toml
store-sqlx-sqlite/: Cargo.toml
webauth/: Cargo.toml
webauth-store/: Cargo.toml
webauth-store-memory/: Cargo.toml
webauth-store-memory/src/: lib.rs  session.rs  store.rs
webauth-store-redis/: Cargo.toml
webauth-store-sqlx/: Cargo.toml
webauth-store-sqlx-postgresql/: Cargo.toml
webauth-store-sqlx-sqlite/: Cargo.toml
webauth-store-sqlx/src/: lib.rs
webauth/examples/: session.rs
webauth/src/: auth.rs  axum.rs  lib.rs  session.rs  store.rs  user.rs
webauth/src/password/: mod.rs  password.rs
