[workspace]
members = [
  "webauth-store-redis",
  "webauth-store-sqlx",
  "webauth",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/zllak/webauth"
repository = "https://github.com/zllak/webauth"
keywords = ["web", "authentication"]
authors = ["Thomas Meson <zllak@hycik.org>"]
description = "Web authentication primitives for Rust"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["std", "serde_derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
