[workspace]
members = [
  "webauth",
  "webauth-store-memory",
  "webauth-store-redis",
  "webauth-store-sqlx",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/zllak/webauth"
repository = "https://github.com/zllak/webauth"
keywords = ["web", "authentication"]
authors = ["Thomas Meson <zllak@hycik.org>"]
description = "Web authentication primitives for Rust"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
http = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "serde_derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
tower = { version = "0.4", default-features = false, features = ["util"] }
tower-cookies = { version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes", "log"] }
uuid = { version = "1.0", default-features = false, features = ["v4", "fast-rng", "serde", "std"] }
