[package]
name = "store-sqlx-postgresql"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[dependencies]
