[package]
name = "webauth-store-memory"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
webauth = { path = "../webauth" }
