[package]
name = "webauth-store-sqlx"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[features]
sqlite = ["sqlx/sqlx-sqlite"]
postgres = ["sqlx/sqlx-postgres"]
mysql = ["sqlx/sqlx-mysql"]

[dependencies]
sqlx = { version = "0.7", default-features = false, features = ["any", "json", "macros", "tls-rustls"] }
