[package]
name = "webauth"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
publish = true

[dependencies]
async-trait = { version = "0.1", default-features = false, optional = true }
axum-core = { version = "0.4", default-features = false, optional = true }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7" }
webauth-store-memory = { path = "../webauth-store-memory" }

[features]
default = []
axum-core = ["dep:axum-core", "dep:async-trait"]

[[example]]
name = "session"
required-features = ["axum-core"]
